2011-03-03  Araki Ken  <arakiken@users.sf.net>

	* inputmethod/ibus: Native iBus support is added. (Experimental)

	* ml_vt100_parser.c: ISO2022 escape sequence which was wrongly parsed by
	  parse_vt100_escape_sequence() in ml_vt100_parser.c is correctly passed to mkf.

	* kik_mem.h: alloca is wrapped by memset(..0xff..) if KIK_DEBUG is defined.

2011-02-27  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c: Size of args array in load_file() is fixed from 4 to 6.

	* configure.in:
	  - '\r' which can be output by pkg-config in win32 is removed
	    from GDK_PIXBUF_CFLAGS and GDK_PIXBUF_LIBS.
	  - mlimgloader is not built in win32.

	* mkf_iso2022_parser.c: iso2022_parser->g1_is_decsp = 0 if cs except
	  decsp is set to g1.

2011-02-26  Araki Ken  <arakiken@users.sf.net>

	* tool/mlconfig/po/Makefile.in.in: $(mkinstalldirs) is removed and
	  $(MKINSTALLDIRS) is used directly.
	  (Thanks to Iwamoto Kouichi san)

	* x_screen.c: ml_term_set_modified all_lines_in_screen() is always called
	  in x_screen_attach() regardless of result of update_special_visual().

	* ml_term.c, ml_screen.c: Meaning of return value of
	  ml_term_update_special_visual() and ml_screen_delete_logical_visual()
	  is changed.

2011-02-24  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c: "/" is appended to LIBMDIR in kik_dl_open().
	    (Thanks to Iwamoto Kouichi san)

	* configure.in: If gdk-pixbuf is linked to mlterm, DLOPEN_LIBM
	  and LIBMDIR macros are never defined.

2011-02-23  Araki Ken  <arakiken@users.sf.net>

	* libtool: version down to 1.5.26

	* x_window.c: x_decsp_font_draw_string() is used instead of
	  x_decsp_draw_image_string() in x_window_draw_decsp_string().
	  (Thanks to Iwamoto Kouichi san)

	* vte.c: Returned value of gdk_screen_get_resolution() is used for DPI
	  of xft font.
	
	* x_font.c: x_font_set_dpi_for_xft() is added.

2011-02-23  Araki Ken  <arakiken@users.sf.net>

	* configure.in, Makefile.in: @DL_LIBS_SB@ is removed from gtk/Makefile.in