@@ -121,10 +121,10 @@ Supported platforms
   * OpenSolaris 2009.06 (CC=cc) (x86)
   * Ubuntu 10.10 (CC=gcc, CC=llvm-gcc-4.2) (x86)
   * CentOS 5 (x86)
-  * MS Windows 7 SP3 (x86)
-  * MS Windows 7 SP3/MSYS 1.0.10 (x86)
-  * MS Windows 7 SP3/Cygwin 1.7.7-1 (CC=gcc, CC="gcc -mno-cygwin") (x86)
-  * MS Windows 7 SP3/Cygwin 1.7.1-1 with X (x86)
+  * MS Windows 7 (x86)
+  * MS Windows 7/MSYS 1.0.10 (x86)
+  * MS Windows 7/Cygwin 1.7.7-1 (CC=gcc, CC="gcc -mno-cygwin") (x86)
+  * MS Windows 7/Cygwin 1.7.1-1 with X (x86)
 
   Following platforms are not actually tested by developers, but were supported
   in the past and are probably supported now.
